// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with 1 expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
    .
  </h1>
</div>
`;

exports[`should render with multiple expenses correctly 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,351,234.34
    .
  </h1>
</div>
`;
